codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__binary_size_ideal_response.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 824
expression: visible_after
---
> > Found small binary artifacts.
  > Consider trimming fixtures for faster tests.
