codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupt_exec_marks_failed.snap
---
source: tui/src/chatwidget/tests.rs
expression: exec_blob
---
• Ran sleep 1
<<<<<<< HEAD
=======
  └ (no output)
>>>>>>> upstream/main
